--- a/css/style.scss
+++ b/css/style.scss
@@ -15,10 +15,12 @@
 	opacity: 0.5;
 	cursor: pointer;
 	-webkit-transition: opacity 0.1s ease-in;
+
+	&:hover {
+		opacity: 1;
+	}
 }
-.utcw-tab-button:hover {
-	opacity: 1;
-}
+
 .utcw-help {
 	float: right;
 	display: block;
@@ -32,66 +34,69 @@
 	text-align: center;
 	color: #fff;
 	font-weight: bold;
-
-
 	background-color: #6295fb;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#6295fb), to(#3265cb));
 	background-image: -webkit-linear-gradient(top, #6295fb, #3265cb);
-	background-image:    -moz-linear-gradient(top, #6295fb, #3265cb);
-	background-image:     -ms-linear-gradient(top, #6295fb, #3265cb);
-	background-image:      -o-linear-gradient(top, #6295fb, #3265cb);
-	background-image:         linear-gradient(top, #6295fb, #3265cb);
-
+	background-image: -moz-linear-gradient(top, #6295fb, #3265cb);
+	background-image: -ms-linear-gradient(top, #6295fb, #3265cb);
+	background-image: -o-linear-gradient(top, #6295fb, #3265cb);
+	background-image: linear-gradient(top, #6295fb, #3265cb);
 	cursor: pointer;
-}
-.utcw-help:hover {
-	color: #fff;
-}
-.utcw-tooltip {
-	color:#000;
-	width: 200px;
-	text-align:center;
-	border:solid 1px #6295fb;
-	-webkit-border-radius:9px;
-	-moz-border-radius:9px;
-	-khtml-border-radius:9px;
-	border-radius:9px;
-}
-.utcw-tooltip ul {
-	list-style-type: circle;
-	margin: 10px 0;
-}
-.utcw-tooltip li {
-	margin: 0 0 0 20px;
-}
-.utcw h3 {
-	margin: 0;
+
+	&:hover {
+		color: #fff;
+	}
 }
 
-.utcw-active {
-	font-weight: bold;
-	opacity: 1;
+.utcw-tooltip {
+	color: #000;
+	width: 200px;
+	text-align: center;
+	border: solid 1px #6295fb;
+	-webkit-border-radius: 9px;
+	-moz-border-radius: 9px;
+	-khtml-border-radius: 9px;
+	border-radius: 9px;
+
+	ul {
+		list-style-type: circle;
+		margin: 10px 0;
+	}
+
+	li {
+		margin: 0 0 0 20px;
+	}
 }
 
 fieldset.utcw {
 	padding: 10px;
 	border: solid 1px #dfdfdf;
 	margin-bottom: 25px;
+
+	h3 {
+		margin: 0 0 5px 0;
+	}
+
+	input[type="number"] {
+		width: 50px;
+	}
+
+	legend {
+		letter-spacing: 2px;
+		font-size: 16px;
+	}
+
+	label.two-col {
+		width: 120px;
+		display: inline-block;
+	}
 }
-fieldset.utcw legend {
-	letter-spacing: 2px;
-	font-size: 16px;
-}
+
 .utcw-hidden {
-	display:none;
+	display: none;
 }
-div.widget_utcw {
-	word-wrap: break-word;
-}
-.utcw .fullwidth {
-	width: 100%;
-}
-fieldset.utcw label.two-col {
-	width: 120px;
-	display: inline-block;
+
+.utcw-active {
+	font-weight: bold;
+	opacity: 1;
 }
