--- a/css/style.scss
+++ b/css/style.scss
@@ -1,110 +1,137 @@
 .utcw-tab-button {
-	border-top: solid 1px #dfdfdf;
-	border-left: solid 1px #dfdfdf;
-	border-right: solid 1px #dfdfdf;
-	border-bottom: none;
-	margin: 0;
-	-webkit-border-top-left-radius: 3px;
-	-webkit-border-top-right-radius: 3px;
-	-moz-border-radius-topleft: 3px;
-	-moz-border-radius-topright: 3px;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
-	padding: 2px;
-	background: transparent;
-	opacity: 0.5;
-	cursor: pointer;
-	-webkit-transition: opacity 0.1s ease-in;
+    border-top: solid 1px #dfdfdf;
+    border-left: solid 1px #dfdfdf;
+    border-right: solid 1px #dfdfdf;
+    border-bottom: none;
+    margin: 0;
+    -webkit-border-top-left-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-topright: 3px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    padding: 2px;
+    background: transparent;
+    opacity: 0.5;
+    cursor: pointer;
+    -webkit-transition: opacity 0.1s ease-in;
 
-	&:hover {
-		opacity: 1;
-	}
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .utcw-help {
-	float: right;
-	display: block;
-	width: 14px;
-	height: 14px;
-	border: solid 1px transparent;
-	-webkit-border-radius: 14px;
-	-moz-border-radius: 14px;
-	-khtml-border-radius: 14px;
-	border-radius: 14px;
-	text-align: center;
-	color: #fff;
-	font-weight: bold;
-	background-color: #6295fb;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#6295fb), to(#3265cb));
-	background-image: -webkit-linear-gradient(top, #6295fb, #3265cb);
-	background-image: -moz-linear-gradient(top, #6295fb, #3265cb);
-	background-image: -ms-linear-gradient(top, #6295fb, #3265cb);
-	background-image: -o-linear-gradient(top, #6295fb, #3265cb);
-	background-image: linear-gradient(top, #6295fb, #3265cb);
-	cursor: pointer;
+    float: right;
+    display: block;
+    width: 14px;
+    height: 14px;
+    border: solid 1px transparent;
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    -khtml-border-radius: 14px;
+    border-radius: 14px;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    background-color: #6295fb;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#6295fb), to(#3265cb));
+    background-image: -webkit-linear-gradient(top, #6295fb, #3265cb);
+    background-image: -moz-linear-gradient(top, #6295fb, #3265cb);
+    background-image: -ms-linear-gradient(top, #6295fb, #3265cb);
+    background-image: -o-linear-gradient(top, #6295fb, #3265cb);
+    background-image: linear-gradient(top, #6295fb, #3265cb);
+    cursor: pointer;
 
-	&:hover {
-		color: #fff;
-	}
+    &:hover {
+        color: #fff;
+    }
 }
 
 .utcw-tooltip {
-	color: #000;
-	width: 200px;
-	text-align: center;
-	border: solid 1px #6295fb;
-	-webkit-border-radius: 9px;
-	-moz-border-radius: 9px;
-	-khtml-border-radius: 9px;
-	border-radius: 9px;
+    color: #000;
+    width: 200px;
+    text-align: center;
+    border: solid 1px #6295fb;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -khtml-border-radius: 9px;
+    border-radius: 9px;
 
-	ul {
-		list-style-type: circle;
-		margin: 10px 0;
-	}
+    ul {
+        list-style-type: circle;
+        margin: 10px 0;
+    }
 
-	li {
-		margin: 0 0 0 20px;
-	}
+    li {
+        margin: 0 0 0 20px;
+    }
 }
 
 fieldset.utcw {
-	padding: 10px;
-	border: solid 1px #dfdfdf;
-	margin-bottom: 25px;
+    padding: 10px;
+    border: solid 1px #dfdfdf;
+    margin-bottom: 25px;
 
-	h3 {
-		margin: 0 0 5px 0;
-	}
+    h3 {
+        margin: 0 0 5px 0;
+    }
 
-	input[type="number"] {
-		width: 50px;
-	}
+    input[type="number"] {
+        width: 50px;
+    }
 
-	legend {
-		letter-spacing: 2px;
-		font-size: 16px;
-	}
+    legend {
+        letter-spacing: 2px;
+        font-size: 16px;
+    }
 
-	label.two-col {
-		width: 120px;
-		display: inline-block;
-	}
+    label.two-col {
+        width: 120px;
+        display: inline-block;
+    }
+
+    .post-term-search-result {
+        background: #fff;
+        box-shadow: 0 0 6px #ccc;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -khtml-border-radius: 3px;
+        border-radius: 3px;
+
+        li {
+            padding: 0 0.5em;
+            cursor: pointer;
+
+            &:first-of-type {
+                padding-top: 0.5em;
+            }
+            &:last-of-type {
+                padding-bottom: 0.5em;
+            }
+        }
+    }
+
+    .submitbox {
+        float: right;
+        cursor: pointer;
+    }
+
 }
 
 .utcw-hidden {
-	display: none;
+    display: none;
 }
 
 .utcw-active {
-	font-weight: bold;
-	opacity: 1;
+    font-weight: bold;
+    opacity: 1;
 }
 
 .utcw-authors {
-	margin-top: 5px;
+    margin-top: 5px;
 }
 
 .utcw-remove-config {
-	cursor: pointer;
+    cursor: pointer;
 }
